# enter-the-gungeon

./: .gitignore  Cargo.toml  README.md
assets/: architecture.excalidraw  level.ldtk
assets/art/character/: The Convict.aseprite  The Convict.json  The Covict.aseprite  idle-front.aseprite  marine_walking_front.aseprite
assets/art/gun/: Budget Revolver.aseprite
assets/art/ui/: dragon.aseprite  heart.aseprite  heart_reduce.aseprite
crates/aseprite/: Cargo.toml
crates/aseprite/src/: lib.rs
crates/aseprite/tests/: serialize.rs
crates/bevy_3d_sprite/: Cargo.toml
crates/bevy_3d_sprite/src/: lib.rs  pbr_sprite.rs  pbr_sprite_sheet.rs  sprite_animation.rs  sprite_sheet.rs
crates/bevy_task_queue/: Cargo.toml
crates/bevy_task_queue/src/: lib.rs  test.rs
crates/ldtk/: Cargo.toml
crates/ldtk/src/: lib.rs
crates/ldtk/tests/: sample.ldtk  sample.rs
crates/sprite_cutter/: Cargo.toml
crates/sprite_cutter/src/: main.rs
crates/tilemap/: Cargo.toml
crates/tilemap/src/: layer.rs  level.rs  lib.rs  main.rs  room.rs  tileset.rs  world.rs
crates/tilemap/tests/: sample.rs
crates/world_generator/: Cargo.toml
crates/world_generator/src/: lib.rs  (+1 more)
src/: bullet.rs  character.rs  cursor.rs  custom_material.rs  custom_mesh.rs  debug.rs  layout.rs  level.rs  main.rs  render_set_system.rs  resource.rs  sprite_animation.rs  tilemap.rs  ui_image_animation.rs  utils.rs
src/actor/: event.rs
src/animation/: mod.rs
src/model/: mod.rs
src/res/: actor.rs  cache.rs  mod.rs
src/ui/: ammo.rs  cursor.rs  gun_card.rs  hp.rs  item_card.rs  mod.rs  status.rs  title.rs
(+12 files in other folders)
