[package]
name = "enter-the-gungeon"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.0" }
bevy-inspector-egui = "0.18.0"
bevy_screen_diagnostics = "0.2.3"
tilemap = { path = "./crates/tilemap" }
