[package]
name = "enter-the-gungeon"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy-inspector-egui = "0.18.0"
bevy_screen_diagnostics = "0.2.3"
bevy_task_queue = { path = "./crates/bevy_task_queue" }
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.bevy]
version = "0.10.0"
default-features = false
features = [
    "animation",
    "bevy_asset",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "hdr",
    "ktx2",
    "zstd",
    "x11",
    "filesystem_watcher",
    "android_shared_stdcxx",
    "tonemapping_luts",
]

[dependencies.bevy_kira_audio]
version = "0.15.0"
default-features = false
features = [
    "wav"
]

[dependencies.image]
version = "0.24.6"
default-features = false
features = ["png"]
